I guess we can't leave the user as the default and have to specifically set it to root (even though it'll already be root).

--- a/build.xml
+++ b/build.xml
@@ -1216,7 +1216,7 @@
           </maintainer>
         </info>
         <permissions>
-          <permission group="${msoy.group}" mode="775" recursive="false">
+          <permission user="root" group="${msoy.group}" mode="775" recursive="false">
             <path>log/</path>
             <path>logs/</path>
             <path>run/</path>
