New creators landing pages for dA a/b test: info landing and signup landing.  Revamp of signup page - upload avatar removed.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -18,37 +18,41 @@ indexLogon = Please logon above to access account information.
 # CreateAccountPanel
 
 createTitle = Welcome to Whirled!
-createIntro = Signing up is as easy as 1, 2, 3... 4!
+createIntro = Create a Free Whirled Account
+createCoins = Get 1000 free coins when you sign up!
+createAlreadyMember = Already a member?
+createLoginLink = Please Log In!
 
-createEmail = Your email address:
-createEmailTip = You''ll use your email address to log in. We care about our customers \
-  and will never sell or share your email address.
+createEmail = Email address:
+createEmailTip = You''ll use your email address to log in. We care about our players \
+  and will never sell or share your address.
 
-createPassword = Make up a password:
-createPasswordTip = Don''t ever tell anyone your password, not even us! \
-  Only enter your password into the box used to log in, nowhere else.
-
-createConfirm = Enter your password again:
-createConfirmTip = Enter your password again to make sure you typed it in correctly.
-
-createRealName = Your real name (optional):
+createRealName = Real name (optional):
 createRealNameTip = Your real name will never be displayed in Whirled. \
   It is only used to help your friends find you.
 
-createDateOfBirth = When is your birthday?
+createDateOfBirth = Birthday:
 createDateOfBirthTip = You must be at least 13 years old to play in Whirled.
+  
+createPassword = Password:
+createPasswordTip = Don''t ever tell anyone your password, not even us! \
+  Only enter your password into the box used to log in.
 
-createDisplayName = Your Whirled name:
+createConfirm = Re-enter password:
+createConfirmTip = Enter your password again to make sure you typed it in correctly.
+
+createDisplayName = Whirled Name:
 createDisplayNameTip = Your Whirled name is what other people will see in Whirled. \
   You can change it any time you like.
 
-createPhoto = Your Whirled photo (optional):
-createPhotoTip = This will be shown on your profile page and elsewhere around the Whirled.
+#createPhoto = Your Whirled photo (optional):
+#createPhotoTip = This will be shown on your profile page and elsewhere around the Whirled.
 
-createCaptcha = Loading Captcha...
+createCaptcha = Humanness:
+createCaptchaLoading = Loading Captcha...
 
-createTOSAgree = I agree to the <a target="_blank" class="external" \
-  href="http://wiki.whirled.com/Terms_of_Service" class="">Terms of Service</a>.
+createTOS = <a target="_blank" href="http://wiki.whirled.com/Terms_of_Service">Terms of Service</a>:
+createTOSAgree = I agree to the Terms of Service
 
 createGo = Join now!
 
@@ -64,6 +68,12 @@ createMustAgreeTOS = You must agree to the Terms of Service in order to sign up.
 createNotThirteen = You must be at least 13 years old to use Whirled.
 
 creatingAccount = Signing up...
+
+#
+# Login page
+loginPageTitle = Log In
+loginPageSubmit = Log In
+
 
 #
 # OptOutPanel
