--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -9,6 +9,7 @@
 titleAccount = My Account
 titleMyWhirled = My Whirled
 titleRooms = My Rooms
+titleCreators = Whirled Welcomes Creators
 
 #
 # My Whirled
@@ -67,6 +68,11 @@ landingAbout = About
 landingTerms = Terms & Conditions
 landingPrivacy = Privacy Policy
 landingHelp = Help
+
+#
+# Creators landing page
+
+creatorsGetStarted = Get started now!
 
 #
 # EditAccountPanel
