Update avatar and pet creation blurbs

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -101,13 +101,17 @@ itemUploadPitch4c = - Make a Game and sell it in the <a href="#shop-4">shop</a>
 itemUploadTitle5 = Create your own Avatar!
 itemUploadPitch5a = - Check out the <a class="external" target="_blank" \
   href="http://wiki.whirled.com/Create_Avatars">Avatar making tutorials</a>
-itemUploadPitch5b = - Use our <a href="#swiftly">built-in IDE</a> to make or remix an Avatar
-itemUploadPitch5c = - Coming soon: remix Avatars right in the Whirled!
+itemUploadPitch5b = - Buy a <a class="external" target="_blank" \
+  href="http://wiki.whirled.com/Remixable_avatar">remix avatar</a> and make one that''s \
+  uniquely yours!
+itemUploadPitch5c = - Make Avatars and sell them in the <a href="#shop-5">shop</a>
 
 itemUploadTitle6 = Create your own Pet!
 itemUploadPitch6a = - Check out the <a class="external" target="_blank" \
   href="http://wiki.whirled.com/Create_Pets">Pet making tutorials</a>
-itemUploadPitch6b = - Coming soon: remixable Pets!
+itemUploadPitch6b = - Buy a <a class="external" target="_blank" \
+  href="http://wiki.whirled.com/Remixable_Items">remix pet</a> and make one that''s \
+  uniquely yours!
 itemUploadPitch6c = - Make Pets and sell them in the <a href="#shop-6">shop</a>
 
 itemUploadTitle7 = Upload your Music!
