Add two more pages and additional tracking points to the dA landing page a/b test

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -21,7 +21,8 @@ createTitle = Welcome to Whirled!
 createIntro = Create a Free Whirled Account
 createCoins = Get 1000 free coins when you sign up!
 createAlreadyMember = Already a member?
-createLoginLink = Please Log In!
+#createLoginLink = Please Log In!
+createLoginLink = Log In!
 
 createEmail = Email address:
 createEmailTip = You''ll use your email address to log in. We care about our players \
