--- a/build.xml
+++ b/build.xml
@@ -407,59 +407,62 @@
 
   <!-- builds our GWT web client -->
   <property name="gwtc.style" value="OBF"/>
+  <property name="pages" value="msoy"/>
   <target name="gclient" depends="jprepare,gmsgs"
           description="Rebuilds the GWT client (but only for Mozilla).">
-    <delete dir="pages/msoy"/>
-    <mkdir dir="pages/msoy"/>
-    <if><isset property="full"/><then>
-       <copy file="${gsrc.dir}/msoy.gwt.xml.in"
-             tofile="${gsrc.dir}/msoy.gwt.xml" overwrite="true"/>
-    </then><else>
-       <echo>Doing Gecko-only compile...</echo>
-       <exec executable="bin/quickify" failonerror="true">
-         <arg value="${gsrc.dir}/msoy.gwt.xml"/>
-       </exec>
-    </else></if>
-    <java fork="true" maxmemory="1024M" failonerror="false" resultproperty="gwt.result"
-          classname="com.google.gwt.dev.GWTCompiler">
-      <classpath>
-        <pathelement location="${classes.dir}"/>
-        <fileset dir="${extlibs.dir}" includes="gwt-dev-*.jar"/> <!-- the GWT compiler -->
-        <fileset dir="${deploy.dir}/lib" includes="*.jar"/>
-        <pathelement location="${src.dir}"/>
-        <pathelement location="${gsrc.dir}"/>
-      </classpath>
-      <arg value="-style"/><arg value="${gwtc.style}"/>
-      <arg value="-out"/>
-      <arg value="${gwtout.dir}"/>
-      <arg value="msoy"/>
-      <!-- gather all the compiler output into a property -->
-      <redirector outputproperty="redirector.out"/>
-    </java>
+    <for list="${pages}" param="page"><sequential>
+      <delete dir="pages/@{page}"/>
+      <mkdir dir="pages/@{page}"/>
+      <if><isset property="full"/><then>
+          <copy file="${gsrc.dir}/@{page}.gwt.xml.in"
+                tofile="${gsrc.dir}/@{page}.gwt.xml" overwrite="true"/>
+        </then><else>
+          <echo>Doing Gecko-only compile...</echo>
+          <exec executable="bin/quickify" failonerror="true">
+            <arg value="${gsrc.dir}/@{page}.gwt.xml"/>
+          </exec>
+      </else></if>
+      <java fork="true" maxmemory="1024M" failonerror="false" resultproperty="gwt.result"
+            classname="com.google.gwt.dev.GWTCompiler">
+        <classpath>
+          <pathelement location="${classes.dir}"/>
+          <fileset dir="${extlibs.dir}" includes="gwt-dev-*.jar"/> <!-- the GWT compiler -->
+          <fileset dir="${deploy.dir}/lib" includes="*.jar"/>
+          <pathelement location="${src.dir}"/>
+          <pathelement location="${gsrc.dir}"/>
+        </classpath>
+        <arg value="-style"/><arg value="${gwtc.style}"/>
+        <arg value="-out"/>
+        <arg value="${gwtout.dir}"/>
+        <arg value="@{page}"/>
+        <!-- gather all the compiler output into a property -->
+        <redirector outputproperty="redirector.out"/>
+      </java>
 
-    <!-- until the GWT compiler does the right thing echo errors/warnings correctly -->
-    <if><contains string="${redirector.out}" substring="[ERROR]"/><then>
-      <echo level="error">${redirector.out}</echo>
-      <!-- be really, really sure that the build fails if we get an error logs -->
-      <property name="has.errors" value="true"/>
-    </then><elseif><contains string="${redirector.out}" substring="[WARNING]"/><then>
-      <echo level="warning">${redirector.out}</echo>
-    </then></elseif><else>
-      <echo level="info">${redirector.out}</echo>
-    </else></if>
+      <!-- until the GWT compiler does the right thing echo errors/warnings correctly -->
+      <if><contains string="${redirector.out}" substring="[ERROR]"/><then>
+          <echo level="error">${redirector.out}</echo>
+          <!-- be really, really sure that the build fails if we get an error logs -->
+          <property name="has.errors" value="true"/>
+        </then><elseif><contains string="${redirector.out}" substring="[WARNING]"/><then>
+            <echo level="warning">${redirector.out}</echo>
+        </then></elseif><else>
+          <echo level="info">${redirector.out}</echo>
+      </else></if>
 
-    <!-- fail the build if the GWT compiler returned 1 or errors were detected -->
-    <fail message="The GWT build failed. See output for details.">
-      <condition><or>
-        <equals arg1="${gwt.result}" arg2="1"/>
-        <isset property="has.errors"/>
-      </or></condition>
-    </fail>
+      <!-- fail the build if the GWT compiler returned 1 or errors were detected -->
+      <fail message="The GWT build failed. See output for details.">
+        <condition><or>
+            <equals arg1="${gwt.result}" arg2="1"/>
+            <isset property="has.errors"/>
+        </or></condition>
+      </fail>
 
-    <!-- clear out some variables -->
-    <var name="gwt.result" unset="true"/>
-    <var name="redirector.out" unset="true"/>
-    <var name="has.errors" unset="true"/>
+      <!-- clear out some variables -->
+      <var name="gwt.result" unset="true"/>
+      <var name="redirector.out" unset="true"/>
+      <var name="has.errors" unset="true"/>
+    </sequential></for>
   </target>
 
   <!-- prepares to build our Flash client -->
@@ -726,11 +729,9 @@
   <property name="jclients" value="admin,game,lwjgl-game,swiftly"/>
   <target name="jclients" depends="dist" unless="temp_skip_proguard"
           description="Rebuilds the Java clients. Use -Djclients=IDENT to just rebuild just one.">
-    <for list="${jclients}" param="ident">
-      <sequential>
-        <antcall target="proguard"><param name="ident" value="@{ident}"/></antcall>
-      </sequential>
-    </for>
+    <for list="${jclients}" param="ident"><sequential>
+      <antcall target="proguard"><param name="ident" value="@{ident}"/></antcall>
+    </sequential></for>
     <!-- build the howdy pardner jar -->
     <jar file="pages/clients/${version}/howdy.jar" basedir="${classes.dir}">
       <include name="com/threerings/msoy/client/HowdyPardner.class"/>
