Moving game bits into game.gwt.

--- a/src/gwt/msoy.gwt.xml.in
+++ b/src/gwt/msoy.gwt.xml.in
@@ -18,8 +18,10 @@
   <source path="com/threerings/msoy/admin/gwt"/>
   <source path="com/threerings/msoy/fora/gwt"/>
   <source path="com/threerings/msoy/group/data"/>
+  <source path="com/threerings/msoy/group/gwt"/>
   <source path="com/threerings/msoy/person/data"/>
   <source path="com/threerings/msoy/game/data/all"/>
+  <source path="com/threerings/msoy/game/gwt"/>
   <source path="com/threerings/underwire/web/data"/>
   <source path="com/threerings/underwire/web/client"/>
   <source path="com/threerings/underwire/gwt/client"/>
