--- a/src/gwt/msoy.gwt.xml.in
+++ b/src/gwt/msoy.gwt.xml.in
@@ -24,6 +24,7 @@
   <source path="com/threerings/msoy/game/gwt"/>
   <source path="com/threerings/msoy/swiftly/data/all"/>
   <source path="com/threerings/msoy/swiftly/gwt"/>
+  <source path="com/threerings/msoy/world/gwt"/>
   <source path="com/threerings/underwire/web/data"/>
   <source path="com/threerings/underwire/web/client"/>
   <source path="com/threerings/underwire/gwt/client"/>
