More rearranging. Now we've got everything in its proper place (at least among the shell, util, images, and ui packages).

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -189,3 +189,8 @@ browserUnsupported = Whirled may not be compatible with your web browser.  For t
 browserGetFirefox = Get Firefox 3
 browserClose = Close this and continue at your own risk...
 
+#
+# MediaUploader
+
+errUploadTooLarge = The file you are uploading is too large.
+errUploadError = An unrecoverable error occurred during the upload.
