Enable generation of bureau services and disable the misnomer MoneyService

--- a/build.xml
+++ b/build.xml
@@ -803,7 +803,7 @@
         <exclude name="**/web/**"/>
         <exclude name="**/peer/**"/>
         <exclude name="**/swiftly/**"/>
-        <exclude name="**/bureau/**"/>
+        <exclude name="**/MoneyService.java"/>
         <exclude name="**/GameServerService.java"/>
       </fileset>
     </service>
