More service extraction and untangling of lateral references.

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -38,6 +38,12 @@ convoAttach = Attach item...
 convoSend = Send
 
 #
+# StartConvoCallback
+
+sccMissingSubject = Please enter a subject for your message.
+sccMissingBody = Please enter something in the message box.
+
+#
 # ComposePanel
 
 composeTitle = Compose Message
