Moved mail into its own package. Nixed some lingering legacy mail stuff as well.

--- a/src/gwt/msoy.gwt.xml.in
+++ b/src/gwt/msoy.gwt.xml.in
@@ -22,6 +22,7 @@
   <source path="com/threerings/msoy/item/data/all"/>
   <source path="com/threerings/msoy/item/gwt"/>
   <source path="com/threerings/msoy/landing/gwt"/>
+  <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
   <source path="com/threerings/msoy/swiftly/data/all"/>
   <source path="com/threerings/msoy/swiftly/gwt"/>
