More split client progress. Now we can display the mail page inside the top-level frame and everything looks amazingly proper. Also started cleaning up our CSS since we'll soon be back in a happy land where each page only sees its own CSS instead of a giant amalgamation of the amazing four hundred billion styles.

--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -33,6 +33,8 @@
   
   <link rel="stylesheet" href="/css/global.css" type="text/css"/>
   <link rel="stylesheet" href="/css/gwt.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/frame.css" type="text/css"/>
+  <link rel="stylesheet" href="/css/page.css" type="text/css"/>
   <link rel="stylesheet" href="/css/account.css" type="text/css"/>
   <link rel="stylesheet" href="/css/admin.css" type="text/css"/>
   <link rel="stylesheet" href="/css/games.css" type="text/css"/>
