--- a/build.xml
+++ b/build.xml
@@ -224,7 +224,7 @@
 
     <!-- grab the deployment et al properties from the configuration location. -->
     <gatherconfiguration app="${app.name}" distribution="${ooo.distribution}" dest="${deploy.dir}">
-      <sources refid="ooo.buildserver.source"/>
+      <sources refid="ooo.msoyconfig.source"/>
       <sources><directory path="${basedir}/etc"/></sources>
       <files>
         <file name="msoy-server.properties"/>
