Added toggle button using icons to indicate favorites. This still needs a css style to make it appear similar to the "Rating" fonts and needs alignment fixed.

--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -36,7 +36,7 @@ removeAvatar = Remove avatar
 
 inUse = In use
 notInUse = Not in use
-favorite = Favorite
+favorite = FAV
 
 #
 # BaseItemDetailPanel
