--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -110,6 +110,8 @@ icOr = or
 icUploadPhoto = Upload an Image from Your Computer:
 icUploadGo = Use This!
 
+errPhotoNotImage = Images must be a GIF, PNG or JPG.
+
 #
 # ItemUtil
 
