--- a/src/gwt/msoy.gwt.xml.in
+++ b/src/gwt/msoy.gwt.xml.in
@@ -24,6 +24,7 @@
   <source path="com/threerings/msoy/landing/gwt"/>
   <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
+  <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/swiftly/data/all"/>
   <source path="com/threerings/msoy/swiftly/gwt"/>
   <source path="com/threerings/msoy/world/gwt"/>
