--- a/src/gwt/help.gwt.xml.in
+++ b/src/gwt/help.gwt.xml.in
@@ -1,5 +1,6 @@
 <module>
   <inherits name="com.google.gwt.user.User"/>
+  <set-property name="user.agent" value="gecko"/>
   <inherits name="com.google.gwt.i18n.I18N"/>
 
   <source path="org/gwtwidgets/client"/>
@@ -12,21 +13,13 @@
   <source path="com/threerings/msoy/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
-  <source path="com/threerings/msoy/mail/gwt"/>
-  <source path="com/threerings/msoy/item/data/all"/>
-  <source path="com/threerings/msoy/item/gwt"/>
-  <source path="com/threerings/msoy/stuff/gwt"/>
-  <source path="com/threerings/msoy/group/data/all"/>
-  <source path="com/threerings/msoy/group/gwt"/>
-  <source path="com/threerings/msoy/fora/gwt"/>
 
-  <source path="client/mail"/>
-  <source path="client/item"/>
+  <source path="client/help"/>
   <source path="client/images"/>
   <source path="client/shell"/>
   <source path="client/ui"/>
   <source path="client/util"/>
   <public path="public"/>
 
-  <entry-point class="client.mail.MailPage"/>
+  <entry-point class="client.help.HelpPage"/>
 </module>
