--- a/src/gwt/me.gwt.xml.in
+++ b/src/gwt/me.gwt.xml.in
@@ -12,8 +12,13 @@
   <source path="com/threerings/msoy/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
+  <source path="com/threerings/msoy/item/data/all"/>
+  <source path="com/threerings/msoy/item/gwt"/>
+  <source path="com/threerings/msoy/person/gwt"/>
 
   <source path="client/me"/>
+  <source path="client/person"/>
+  <source path="client/item"/>
   <source path="client/images"/>
   <source path="client/shell"/>
   <source path="client/ui"/>
