--- a/src/gwt/people.gwt.xml.in
+++ b/src/gwt/people.gwt.xml.in
@@ -21,6 +21,7 @@
   <source path="com/threerings/msoy/game/gwt"/>
   <source path="com/threerings/msoy/group/data/all"/>
   <source path="com/threerings/msoy/group/gwt"/>
+  <source path="com/threerings/msoy/stuff/gwt"/>
   <source path="com/threerings/msoy/mail/gwt"/>
   <source path="com/threerings/msoy/person/gwt"/>
 
