--- a/build.xml
+++ b/build.xml
@@ -209,7 +209,9 @@
   <property name="msgs2.list" value="games.Games,whirleds.Whirleds,stuff.Stuff,editem.Editem"/>
   <property name="msgs3.list" value="item.Item,mail.Mail,msgs.Msgs,people.People,swiftly.Swiftly"/>
   <property name="msgs4.list" value="world.World,me.Me,remix.Remix,help.Help,support.Support"/>
-  <property name="gmsgs.list" value="${msgs1.list},${msgs2.list},${msgs3.list},${msgs4.list}"/>
+  <property name="msgs5.list" value="landing.Landing,person.Person"/>
+  <property name="msgsN.list" value="${msgs1.list},${msgs2.list},${msgs3.list},${msgs4.list}"/>
+  <property name="gmsgs.list" value="${msgsN.list},${msgs5.list}"/>
 
   <!-- declare our classpath -->
   <path id="classpath">
