Changed "server side code" to "server agent"

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -72,11 +72,11 @@ furniHotSpotTip = This is the pixel offset from the upper left of the furniture 
 gameLabel = Game Media
 gameTip = The SWF file for your game
 
-gameServerHeadingTip = The following fields are only needed for game with server-side actionscript
-gameServerMediaLabel = Server Library
-gameServerMediaTip = The .abc file to use for your game on the whirled server
-gameServerClass = Class name
-gameServerClassTip = Must be in the .abc file
+gameServerHeadingTip = The following fields are only needed for games that employ a server agent
+gameServerMediaLabel = Server Agent Compiled Code
+gameServerMediaTip = An .abc file containing your server agent.
+gameServerClass = Server Agent Class
+gameServerClassTip = Full name of the class to instantiate (leave blank for default)
 
 gameShotTab = Screenshot
 gameShotTitle = This is displayed on your game''s info page
