--- a/build.xml
+++ b/build.xml
@@ -1009,7 +1009,7 @@
   <!-- cleans out the compiled GWT bits and caches -->
   <target name="gclean">
     <delete dir="${gwtout.dir}"/>
-    <delete file="${gsrc.dir}/*.gwt.xml"/>
+    <delete><fileset dir="${gsrc.dir}" includes="*.gwt.xml"/></delete>
   </target>
 
   <!-- fully cleans out all build results -->
