The tutorial target no longer compiles because the AVRG API is in transition.  I've removed it from the build sequence and added a big fat TODO to mark that this needs to be readdressed when feasible.
Why didn't this break the msoy build in Bamboo?  There hasn't been a commit to the msoy repo since
the ooo-libs/whirled change was made, but I was under the impression that a change to any dependancy
triggers a build in msoy...

--- a/build.xml
+++ b/build.xml
@@ -970,8 +970,10 @@
     </copy>
   </target>
 
+  <!-- TODO: the tutorial target has been removed from flashapps until it compiles again after a 
+       the API shuffle is done, and the tutorial code has been refactored -->
   <!-- builds top-level flash applications. -->
-  <target name="flashapps" depends="asprepare,mediastub,tutorial,
+  <target name="flashapps" depends="asprepare,mediastub,
                                     videoviewer,decorviewer,remixer">
     <antcall target="ascompile"><param name="astype" value="world"/></antcall>
     <antcall target="ascompile"><param name="astype" value="game"/></antcall>
