--- a/src/gwt/client/item/ItemMessages.properties
+++ b/src/gwt/client/item/ItemMessages.properties
@@ -36,7 +36,7 @@ removeAvatar = Remove avatar
 
 inUse = In use
 notInUse = Not in use
-favorite = FAV
+favorite = Favorite
 
 #
 # BaseItemDetailPanel
