Setting stuff up for the Passport GWT page.  Badge and its extensions moved to a new com.threerings.msoy.badge.data.all package, and get included in the me and msoy GWT builds.  Also, Badge no longer depends on BadgeType, which was necessary for GWT integration.
This refactoring has completely sold me on Eclipse + Subclipse.  In the actionscript side of things
(which was thankfully the simpler refactor), I had to move the files by hand, and then go and 
compile and find all the now broken imports and change them by hand.  

In Java (Eclipse), I simply told it I wanted to move these three classes to a new package and 
*voila*, I have a new package with the classes moved, and all imports fixed for me, including the 
necessary SVN shuffling.  *Nice*

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -10,6 +10,7 @@ titleAccount = My Account
 titleMyWhirled = My Whirled
 titleRooms = My Rooms
 titleCreators = Whirled Welcomes Creators
+titlePassport = Passport
 
 #
 # My Whirled
@@ -62,7 +63,7 @@ editRealNameHeader = Update Real Name
 editRealNameTip = Real Name is for searching purposes only.  It will never be displayed.
 editRealName = Real Name:
 editNameReady = Click ''Update'' to update your real name.
-realNameUpdated = Real Name updated.  
+realNameUpdated = Real Name updated.
 
 editEmailHeader = Update Email Address
 editEmail = Email address:
