--- a/src/gwt/msoy.gwt.xml.in
+++ b/src/gwt/msoy.gwt.xml.in
@@ -10,6 +10,7 @@
   <source path="com/threerings/gwt"/>
   <source path="com/threerings/util"/>
   <source path="com/threerings/presents/dobj"/>
+  <source path="com/threerings/msoy/badge/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
   <source path="com/threerings/msoy/data/all"/>
