Further progress toward getting the landing page to work.

--- a/src/gwt/client/whirleds/WhirledsMessages.properties
+++ b/src/gwt/client/whirleds/WhirledsMessages.properties
@@ -166,9 +166,8 @@ myPostedBy = by
 myToday = Today
 myNoWhirleds = You haven''t joined any Whirleds yet.
 
+mySortBy = Sort by:
 mySortByPeopleOnline = People Online
 mySortByName = Whirled Name
 mySortByManager = Whirleds I Manage
 mySortByNewestPost = Newest Post
-
-
