--- a/src/gwt/landing.gwt.xml.in
+++ b/src/gwt/landing.gwt.xml.in
@@ -4,6 +4,7 @@
   <inherits name="com.google.gwt.i18n.I18N"/>
 
   <source path="org/gwtwidgets/client"/>
+  <source path="com/kisgergely/gwt/canvas/client"/>
   <source path="com/threerings/io"/>
   <source path="com/threerings/util"/>
   <source path="com/threerings/presents/dobj"/>
@@ -13,8 +14,21 @@
   <source path="com/threerings/msoy/data/all"/>
   <source path="com/threerings/msoy/web/data"/>
   <source path="com/threerings/msoy/web/client"/>
+  <source path="com/threerings/msoy/item/data/all"/>
+  <source path="com/threerings/msoy/item/gwt"/>
+  <source path="com/threerings/msoy/fora/gwt"/>
+  <source path="com/threerings/msoy/game/data/all"/>
+  <source path="com/threerings/msoy/game/gwt"/>
+  <source path="com/threerings/msoy/group/data/all"/>
+  <source path="com/threerings/msoy/group/gwt"/>
+  <source path="com/threerings/msoy/landing/gwt"/>
 
   <source path="client/landing"/>
+  <source path="client/whirleds"/>
+  <source path="client/games"/>
+  <source path="client/account"/>
+  <source path="client/msgs"/>
+  <source path="client/item"/>
   <source path="client/images"/>
   <source path="client/shell"/>
   <source path="client/ui"/>
